[FIX] website: improve date/datetime picker behavior on mobile
Before this commit:
- The cursor was shown inside the date/datetime input field on mobile,
  which triggered the keyboard unnecessarily and degraded the user
  experience.

Steps to reproduce:
1. Add a form snippet.
2. Add a Date/Datetime field.
3. Click on the Date field.
   - The virtual keyboard appears and the datepicker popover may be
     clipped or partially hidden (on mobile devices).

After this commit:
- The virtual keyboard is now prevented from opening on date/datetime
  inputs, and the text cursor within these fields is also hidden for
  small screens.

task-4745714

closes odoo/odoo#212053

--- a/addons/website/static/src/snippets/s_website_form/001.scss
+++ b/addons/website/static/src/snippets/s_website_form/001.scss
@@ -100,6 +100,11 @@
             background-color: darken($o-gray-200, 4.5%);
         }
     }
+    @include media-breakpoint-down(md) {
+        .datetimepicker-input{
+            caret-color: transparent;
+        }
+    }
 }
 
 body:not(.editor_enable) .s_website_form[data-vcss="001"] {
